# predictify-frontend

./: .env.example  .env.testnet.example  .gitignore  .pnpmfile.cjs  ACTIVITY_TIMELINE_DELIVERY.md  ACTIVITY_TIMELINE_DESIGN.md  ACTIVITY_TIMELINE_PATTERNS.md  CHANGELOG.md  COMMIT_MESSAGE.txt  CONTRIBUTING.md  DESIGN_ACCESSIBILITY_CHECKLIST.md  DESIGN_MOBILE_PORTFOLIO_QUICK_ACTIONS.md  DESIGN_STICKY_ACTION_PANEL.md  Design.md  Dockerfile  GIT_WORKFLOW.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_COMPLETE.md  NESTED_BUTTON_FIX_FINAL.md  PR_LOADING_PATTERNS.md  README.md  SETTINGS_TABS_IMPLEMENTATION.md  STREAM_MIGRATION_GUIDE.md  STREAM_MIGRATION_IMPLEMENTATION.md  TABS_COMPONENT_API.md  TYPOGRAPHY.md  TYPOGRAPHY_IMPLEMENTATION.md  TYPOGRAPHY_TESTING.md  VERIFICATION.md  WEBHOOK-IMPLEMENTATION-SUMMARY.md  __repo_files.txt  container-hardening.test.ts  contracts-test-output.txt  design_handoff_stellar_address.md  detector.test.ts  detector.ts  escrow-invariants.test.ts  escrow-invariants.ts  generate-svgs.js  global.d.ts  (+18 more)
.github/: pull_request_template.md  security-exemptions.json
.github/workflows/: bench.yml  ci.yml  clippy.yml  contracts.yml  coverage.yml  gas.yml  security.yml  smoke.yml
__mocks__/next/: link.js  navigation.js  router.js
app/: globals.css  layout.tsx  not-found.tsx  page.test.tsx  page.tsx  uiux  uiux.md
app/(dashboard)/: layout.tsx
app/(marketing)/: layout.tsx  page.tsx
app/__tests__/: a11y-manifest.test.js  focus-visible.test.js  not-found.test.tsx
app/activity/: page.test.tsx  page.tsx
app/i18n/: index.ts
components/: BetCard.tsx  BetList.tsx  BetRow.tsx  BettingHistory.tsx  ExternalLink.tsx  FilterSection.tsx  HoverTooltip.tsx  PredictionCard.tsx  PredictionsList.tsx  QuickBetPresets.tsx  StatsSection.tsx  WithdrawButton.tsx  WithdrawalHistorySection.tsx  connect-wallet-modal.messages.ts  connect-wallet-modal.tsx  contact-support-form.tsx  error-boundary.tsx  faq.tsx  feature-card.tsx  features-card.tsx  other-way-to-get-help.tsx  predictioncard  providers.tsx  typography-example.tsx  wallet-connection-issues.tsx  wallet-integration.tsx
constants/: wallet-kits.constant.ts
content/: changelog.json  features.ts  markets.sample.ts
context/: AccessibilityContext.tsx  ClaimShareContext.tsx  PrivacyContext.tsx  WalletContext.tsx
contracts/: .clippy.toml  .gitignore  Cargo.toml  README.md  rust-toolchain.toml
contracts/.github/workflows/: smoke.yml
contracts/contracts/streampay-stream/: Cargo.toml  Makefile  README.md  SECURITY.md  coverage-output.txt  test_errors.txt
contracts/contracts/streampay-stream/benches/: README.md  entrypoints.rs  stream_benchmarks.rs
contracts/contracts/streampay-stream/fuzz/: Cargo.toml
contracts/contracts/streampay-stream/fuzz/fuzz_targets/: create.rs  create_stream.rs
contracts/contracts/streampay-stream/src/: allowlist.rs  coverage_test.rs  error.rs  events.rs  lib.rs  limits.rs  malicious_token.rs  prop_test.rs  release.rs  storage.rs  test.rs  time.rs  upgrade.rs  views.rs  views_integration_test.rs
contracts/predictify-hybrid/: Cargo.toml
contracts/predictify-hybrid/src/: auth.rs  events.rs  lib.rs  oracles.rs  recovery.rs  recovery_tests.rs  resolution.rs  storage.rs
contracts/predictify-hybrid/tests/: oracle_result_event_test.rs
contracts/src/: lib.rs  stream.rs
contracts/tests/: smoke.sh
data/: mokeData.ts
design/: README.md
docs/: ACCESSIBILITY.md  API.md  ARCHITECTURE.md  BODY-SIZE-LIMITS.md  BREADCRUMBS.md  CONTRACT-COVERAGE.md  COUNTDOWN_REDUCED_MOTION.md  DEPLOYMENT-CHECKLIST.md  DOCUMENT_TITLES.md  EXTERNAL_LINKS.md  FIGMA-BREAKPOINTS-MODAL-SPEC.md  ICS-EXPORT-API.md  IMPLEMENTATION-SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION.md  ISSUE-75-BREAKPOINTS-SUMMARY.md  PREDICTIONS_EMPTY_STATE.md  PRIVACY.md  QUICKSTART.md  README.md  RECOMMENDATIONS.md  SDK.md  SECURITY-CI-SETUP.md  SECURITY-SCANNING-GUIDE.md  STATE_MACHINE.md  STORAGE_LAYOUT.md  THEME_NO_FLASH.md  WALLET.md  WHATS_NEW.md  a11y-status.md  api-v2-migration.md  audit-log.md  backend-contributing.md  contract-events-panel.md  contract-smoke-tests.md  copy-address-accessibility.md  density.md  deprecation-notice-template.md  design-qa-checklist.md  error-codes.md  (+24 more)
hooks/: use-count-up.ts  use-countdown-tick.ts  use-long-press.ts  use-parallax.ts  use-toast.ts  use-whats-new.ts  useDensity.ts  useHideBalancesShortcut.ts  useLanguage.ts  useReducedMotion.ts  useSessionStorage.ts  useSoundEnabled.ts  useTransaction.hook.ts  useWallet.hook.ts
lib/: activity-timeline.ts  anomalyDetector.test.ts  anomalyDetector.ts  apiClient.test.ts  apiClient.ts  bodySize.test.ts  bodySize.ts  breadcrumbs.ts  chaos.test.ts  chaos.ts  compare-store.ts  config.ts  dbClient.isolation.test.ts  dbClient.ts  env.ts  events-store.ts  feeBump.ts  fingerprint-audit.test.ts  fingerprint-audit.ts  fingerprint.test.ts  fingerprint.ts  indexer.test.ts  indexer.ts  jwks.test.ts  jwks.ts  lastSeen.test.ts  lastSeen.ts  leaderboard-data.ts  mock-data.ts  mock-predictions.ts  network-tint.ts  onChainClient.ts  quiet-hours.ts  rateLimitIp.test.ts  rateLimitIp.ts  recommendations.ts  requestId.test.ts  scroll-position-store.ts  shortcuts.ts  sloMonitor.test.ts  (+5 more)
migrations/: 0001_webhook_delivery.sql
operations/: cron.md  deploy-grantfox.sh  grantfox-build.sh  make-grantfox-deploys.sh
scripts/: backfill-activity-timeline.ts  backfill-indexer.ts  build-grantfox-contract.sh  contracts-changelog.py  deploy-grantfox-contract.sh  gas-regression.sh  generate-sounds.py  generate-sounds.sh  purge-audit.test.ts  purge-audit.ts  recon-cli.test.ts  recon-cli.ts  reconcile-streams.ts  reconcile.ts  run-from-realpath.mjs  seed-streams.js  smoke-contract.sh  smoke-contract.test.ts  smoke.sh  stellar-dev-lib.js  stellar-dev.sh  stellar-dev.test.ts  test-quick.js  validate-implementation.js  validate-openapi.mjs  validate-security.mjs
styles/: globals.css
tests/: contract.test.ts  sqli.test.ts  streamsShape.test.ts  withdraw.feeBump.test.ts
types/: activity.ts  disputes.ts  events.ts  index.ts  moderation.ts  predictions.ts
utils/: maskAmount.ts
(+739 files in other folders)
