[package]
name = "streampay-stream"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[[bench]]
name = "stream_benchmarks"
harness = true    # use the built-in libtest bench runner (requires nightly)

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
proptest = "1.0"
